Fixing styling on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,7 @@ a {
 }
 
 .headshot {
-  /* width: 325px; */
-  height: 400px;
+  border-radius: 12.5rem;
 }
 
 .skills-title {
